Test rcshibboleth with python 2 & 3 for transition
Change-Id: Ib247ddc882505971f3ec918ce439bb9a6176d5df

--- a/python.yaml
+++ b/python.yaml
@@ -193,6 +193,10 @@
       - '{name}-os-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
+         environment: 'py36'
+      - '{name}-os-tox-{environment}':
+         access: 'nobody'
+         organisation: 'internal'
          environment: 'flake8'
       - '{name}-os-deb-package':
          access: 'nobody'
