--- a/tempest.yaml
+++ b/tempest.yaml
@@ -552,6 +552,12 @@
          whitelist: 'trove'
 
 - project:
+    name: trove-mysql-8.0
+    jobs:
+      - 'tempest-{name}-check':
+         whitelist: 'trove'
+
+- project:
     name: trove-postgresql-9.6
     jobs:
       - 'tempest-{name}-check':
