Add r10k deploy/diff for undertest env
Change-Id: I90a2033860c802fc042ec56a57d0b337e78f3e14

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -747,6 +747,15 @@
       - '{name}-puppet-unit':
          access: 'nobody'
          organisation: 'internal'
+      - '{name}-r10k-deploy':
+         access: 'nobody'
+         organisation: 'internal'
+      - '{name}-r10k-cleanup':
+         access: 'nobody'
+         organisation: 'internal'
+      - '{name}-r10k-diff-catalog':
+         access: 'nobody'
+         organisation: 'internal'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
