--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -317,7 +317,7 @@
           fi
           git push r10k origin/master:refs/heads/master
           git push r10k origin/master:refs/heads/r10k_diff_catalog_${PUPPET_ENV}
-          git ls-remote | grep "refs/changes/.*/${GERRIT_CHANGE_NUMBER}/" | cut -f1 | xargs -n1 -ICOMMIT git push r10k :COMMIT
+          git ls-remote | grep "refs/changes/.*/${GERRIT_CHANGE_NUMBER}/[0-9]" | cut -f1 | xargs -n1 -ICOMMIT git push r10k :COMMIT
       - ssh-builder:
           ssh-user-ip: puppet@r10k.mgmt.rc.nectar.org.au:22
           command: r10k-cleanup.sh $GERRIT_PATCHSET_REVISION
