Adding network tempest checks for monash-01
monash-01 is ready for advanced networking.
Enabling tempest checks will allow better monitoring.

Change-Id: I3071a2e88357bb69db1a8f1449b6dc3a82eb2aee

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1268,6 +1268,7 @@
     site:
         - auckland
         - melbourne-qh2
+        - monash-01
         - monash-02
         - qld
         - tasmania
