Update dev AZ names
cn -> lani
elk -> luna

Change-Id: I862034e816684158c30954fa50427aa54fd99887

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1026,8 +1026,8 @@
             - tasmania-s
             - coreservices
             - qh2-test
-            - cn
-            - elk
+            - lani
+            - luna
           description: 'Availability zone.'
     properties:
       - authorization:
