Fix for the heat scenario rctest jobs
This fixes the site name is not expanding in the job definition issue
in previous change Ia56e6fab49401563fd4d7ad44d67c28a8c622b69

Note: have used the "jenkis-jobs test" command to dry run the change in
jenkins upgrader.

Change-Id: I4500322546bc35d84e05772248adc54c8475f1cb

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1047,7 +1047,7 @@
          credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
     builders:
       - tempest-check-whitelist-noparam:
-          check: '{name}'
+          check: '{job}'
           whitelist: '{whitelist}'
           cloud: '{cloud}'
           site: '{site}'
