--- a/other.yaml
+++ b/other.yaml
@@ -198,7 +198,7 @@
 
 
 - project:
-    name: octocatalog
+    name: octocatalog-diff
     jobs:
       - 'octocatalog-diff-test':
          access: 'nobody'
