Run octocatalog-diff tests only on Xenial
Due to OpenSSL changes, the rake tests fails on Bionic. Suspect this is due to
the test puppet server having a different behaviour when testing invalid SSL
scenerios. Weirdly, the number of fail tests varies, sometimes 2, sometimes 3.

  1) with an actual Puppet Enterprise ENC and SSL client auth should fail with no SSL certificate details
     Failure/Error: expect(result[:exception].class.to_s).to eq('OpenSSL::SSL::SSLError')

       expected: "OpenSSL::SSL::SSLError"
            got: "Errno::ECONNRESET"

Refactor not to share code with other rake tests, since octocatalog-diff
relies on a bootstrap script to set up libraries install of `bundle
install`.

Also bugfixs in project URL.

Change-Id: I9483bcbd6967af4403ef5abe33192fa292fafd98

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -26,6 +26,14 @@
 
 
 - builder:
+    name: octocatalog-diff-rake-test
+    builders:
+      - shell: |
+          ./script/bootstrap
+          export PUPPET_VERSION="5.5.8"
+          bundle exec rake test 2>&1
+
+- builder:
     name: librarian-install
     builders:
       - ssh-builder:
