--- a/python.yaml
+++ b/python.yaml
@@ -37,19 +37,19 @@
 - project:
     name: langstroth
     jobs:
-      - '{name}-xenial-tox-{environment}':
+      - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py27'
-      - '{name}-xenial-tox-{environment}':
+         environment: 'py36'
+      - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
-      - '{name}-xenial-tox-{environment}':
+      - '{name}-bionic-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'jshint'
-      - '{name}-xenial-deb-package':
+      - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
