Add tempest telemetry scenario test, and add it to testcloud-upgrade
Change-Id: I1e0c6743fcc183dcced686bc1d73e74df348c8a3

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -609,6 +609,22 @@
            - coreservices
 
 - project:
+    name: telemetry
+    jobs:
+      - 'tempest-{name}-check':
+          whitelist: 'telemetry'
+
+- project:
+    name: telemetry-rctest
+    jobs:
+      - 'tempest-{name}-check-{site}':
+          job: 'telemetry'
+          whitelist: 'telemetry'
+          cloud: 'testing'
+          site:
+            - coreservices
+
+- project:
     name: glance-scenario
     jobs:
       - 'tempest-{name}-check-site-agnostic':
