use puppet-prod-review with puppet-spartan module
Change-Id: I13ac8a35079e73edbc6492b009833f2ecffc4ce5

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -514,6 +514,9 @@
       - '{name}-puppet-unit':
          access: 'nobody'
          organisation: 'resplat-hpc'
+      - '{name}-puppet-prod-review':
+         access: 'nobody'
+         organisation: 'resplat-hpc'
 
 - project:
     name: puppet-sut
