deploy puppet-spartan commits to production branch
Change-Id: I319aeec6fa90aedc5fac54496e254aa1b7b4309d

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -1029,6 +1029,11 @@
               branches:
                 - branch-compare-type: 'PLAIN'
                   branch-pattern: 'master'
+            - project-compare-type: 'PLAIN'
+              project-pattern: 'resplat-hpc/puppet-spartan'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'production'
           silent: false
           escape-quotes: true
 
