--- a/puppet.yaml
+++ b/puppet.yaml
@@ -932,7 +932,11 @@
           default: master
           description: "The default branch to test."
 
-    triggers:
+    properties:
+      - build-discarder:
+          num-to-keep: 50
+
+     triggers:
       - gerrit:
           trigger-on:
               - change-merged-event
