Add train tox jobs
Change-Id: I39419abfd6fd66df9f33eb144532ac92fbd96617

--- a/tox.yaml
+++ b/tox.yaml
@@ -3,9 +3,6 @@
     jobs:
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'xenial'
-            os_release: 'pike'
-      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
-            ubuntu_release: 'xenial'
             os_release: 'queens'
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'bionic'
@@ -16,6 +13,9 @@
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'bionic'
             os_release: 'stein'
+      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
+            ubuntu_release: 'bionic'
+            os_release: 'train'
 
 
 - job-template:
