Add Octavia image support
Change-Id: I1a305047e89aef4f2beaa3592d72102aedb8be7e

--- a/images.yaml
+++ b/images.yaml
@@ -79,6 +79,11 @@
       - 'image-build-trove-{name}'
 
 - project:
+    name: haproxy-ubuntu-18.04-x86_64
+    jobs:
+      - 'image-build-octavia-{name}'
+
+- project:
     name: rstudio-ubuntu-18.04-x86_64
     jobs:
       - 'image-build-extra-{name}':
@@ -242,6 +247,51 @@
 
     builders:
       - image-builder-trove
+
+    wrappers:
+      - credentials-binding:
+        - username-password-separated:
+           credential-id: 7a2e4b77-a292-47a1-b852-c0cfd9c1c383
+           username: IMAGE_BUILDER_USERNAME
+           password: IMAGE_BUILDER_PASSWORD
+
+
+- job-template:
+    name: 'image-build-octavia-{name}'
+    defaults: global
+    node: openstack
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default ref to test."
+      - string:
+          name: GERRIT_BRANCH
+          default: master
+          description: "The default branch to test."
+
+    properties:
+      - authorization:
+          nobody:
+            - job-read
+            - job-discover
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/NeCTAR-RC/nectar-images.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: true
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - image-builder-octavia
 
     wrappers:
       - credentials-binding:
@@ -481,7 +531,8 @@
           NAME=${JOB_NAME#image-build-}
           OUTPUT_DIR=$WORKSPACE/output-$BUILD_TAG
           FACT_DIR=$OUTPUT_DIR/.facts
-          rm -fr $FACT_DIR
+          TAG_DIR=$OUTPUT_DIR/.tag
+          rm -fr $FACT_DIR $TAG_DIR
           jq ".builders[0].name = \"$BUILD_TAG\" | .builders[0].vm_name = \"$BUILD_TAG\"" $NAME.json > $BUILD_TAG.json
           echo "Starting packer build..."
           packer build -color=false $BUILD_TAG.json
@@ -502,6 +553,11 @@
               VAL=$(cat $FACT_DIR/$FACT)
               echo "  -> $FACT: '$VAL'..."
               openstack image set --property $FACT=$"$VAL" $IMAGE_ID
+          done
+          echo "Applying tags..."
+          for TAG in $(ls $TAG_DIR); do
+              echo "  -> tag: '$TAG'..."
+              openstack image set --property $TAG $IMAGE_ID
           done
           echo "Creating instance..."
           [ -z $AVAILABILITY_ZONE ] || AZ_OPT="--availability-zone $AVAILABILITY_ZONE"
@@ -629,6 +685,56 @@
           echo "     https://wiki.rc.nectar.org.au/wiki/Trove"
           echo ""
           echo "================================================================================"
+
+
+- builder:
+    name: 'image-builder-octavia'
+    builders:
+      - shell: |
+          #!/bin/bash -e
+          export OS_USERNAME=$IMAGE_BUILDER_USERNAME
+          export OS_PASSWORD=$IMAGE_BUILDER_PASSWORD
+          export OS_AUTH_URL=https://keystone.rc.nectar.org.au:5000/v3
+          export OS_PROJECT_DOMAIN_NAME=Default
+          export OS_USER_DOMAIN_NAME=Default
+          export OS_IDENTITY_API_VERSION=3
+          export OS_PROJECT_NAME=octavia
+          NAME=${JOB_NAME#image-build-}
+          OUTPUT_DIR=$WORKSPACE/output-$BUILD_TAG
+          FACT_DIR=$OUTPUT_DIR/.facts
+          TAG_DIR=$OUTPUT_DIR/.facts
+          rm -fr $FACT_DIR $TAG_DIR
+          jq ".builders[0].name = \"$BUILD_TAG\" | .builders[0].vm_name = \"$BUILD_TAG\"" $NAME.json > $BUILD_TAG.json
+          echo "Starting packer build..."
+          packer build -color=false $BUILD_TAG.json
+          IMAGE_NAME="$(cat $FACT_DIR/nectar_name)"
+          rm $BUILD_TAG.json
+          cd $OUTPUT_DIR
+          echo "Shrinking image..."
+          echo "==> qemu-img convert -c -o compat=0.10 -O qcow2 $BUILD_TAG $BUILD_TAG.qcow2"
+          qemu-img convert -c -o compat=0.10 -O qcow2 $BUILD_TAG $BUILD_TAG.qcow2
+          rm -f $BUILD_TAG
+          echo "Creating image $IMAGE_NAME..."
+          echo "==> openstack image create --disk-format qcow2 --container-format bare --file $BUILD_TAG.qcow2 \"NeCTAR $IMAGE_NAME\""
+          IMAGE_ID=$(openstack image create -f value -c id --disk-format qcow2 --container-format bare --file $BUILD_TAG.qcow2 "NeCTAR $IMAGE_NAME")
+          echo "Image $IMAGE_ID created!"
+          echo "Applying properties..."
+          for FACT in $(ls $FACT_DIR); do
+              VAL=$(cat $FACT_DIR/$FACT)
+              echo "  -> $FACT: '$VAL'..."
+              openstack image set --property $FACT=$"$VAL" $IMAGE_ID
+          done
+          echo "Applying tags..."
+          for TAG in $(ls $TAG_DIR); do
+              echo "  -> tag: '$TAG'..."
+              openstack image set --tag $TAG $IMAGE_ID
+          done
+          openstack image set --property nectar_name="$IMAGE_NAME" $IMAGE_ID
+          openstack image set --property nectar_build=$BUILD_NUMBER $IMAGE_ID
+          echo "================================================================================"
+          echo "  NeCTAR $IMAGE_NAME v$BUILD_NUMBER build successful!"
+          echo "================================================================================"
+          openstack image show --max-width=120 $IMAGE_ID
 
 - builder:
     name: 'image-builder-extra'
