Add py36 job for nectar-openstack
Change-Id: I1e5e7ac083c799e87d3f7a762276769553d20224

--- a/python.yaml
+++ b/python.yaml
@@ -93,6 +93,10 @@
       - '{name}-bionic-tox-{environment}':
          access: 'nobody'
          organisation: 'internal'
+         environment: 'py36'
+      - '{name}-bionic-tox-{environment}':
+         access: 'nobody'
+         organisation: 'internal'
          environment: 'flake8'
       - '{name}-bionic-deb-package':
          access: 'nobody'
