Add puppet-octavia job
Change-Id: I8fbf37ebaf5a477c9f71278a151ba5077545484c

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -363,6 +363,13 @@
          organisation: 'internal'
 
 - project:
+    name: puppet-octavia
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-openstack
     jobs:
       - '{name}-puppet-unit':
