Add puppet-ovn to CI
Change-Id: Ib9099601f24d9c0a9319b047f29810cd2950a4a4

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -398,6 +398,13 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: puppet-ovn
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppet-patchman
     jobs:
       - '{name}-puppet-unit':
