Add initial job for tutorials
This will be updated later to include some jobs for linting,
building, etc

Change-Id: I44eaabd288d4b81981fffd78e66ac9b3de73545f

--- a/docs.yaml
+++ b/docs.yaml
@@ -21,3 +21,10 @@
       - '{name}-jekyll-deploy':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+
+- project:
+    name: tutorials
+    jobs:
+      - '{name}-dummy':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
